kiwi.bnf
compilationUnit ::= (segment | segment*)?;

segment ::= TEXT | importDirective | renderDirective;

importDirective ::= '@import' '(' STRING ')'
                 | '@import' '(' STRING ',' STRING ')';


renderDirective ::= '@render' '(' kiwiElement ')';


kiwiElement ::= '<' IDENTIFIER attributes? '/>';
/*
for now let's keep parser simple

kiwiElement ::= selfClosingElement
        | startTag
            childrenElements
          endTag;

startTag ::= '<' IDENTIFIER attributes? '>';

endTag ::= '</' IDENTIFIER '>';

selfClosingElement ::= '<' IDENTIFIER attributes? '/>';

childrenElements ::= (kiwiElement | kiwiElement*)?;
*/

attributes ::= (attribute | attribute*);

attribute ::=  IDENTIFIER '=' STRING;
